--- a/hackathon_starter/hackathon/templates/hackathon/api_examples.html
+++ b/hackathon_starter/hackathon/templates/hackathon/api_examples.html
@@ -9,7 +9,7 @@
 	    <div class="col-sm-4"><img src="/static/img/github.png"></div>
 	    <div class="col-sm-4"><a href="/hackathon/tumblr"><img src="/static/img/tumblr.png"></a></div>
 	    <div class="col-sm-4"><a href="http://127.0.0.1:8000/hackathon/tumblr/"><img src="/static/img/tumblr.png"></a></div>
-		 <div class="col-sm-4"><a href="http://127.0.0.1:8000/hackathon/linkedin/"><img src="/static/img/linkedin.png"></a></div>
+		 <div class="col-sm-4"><a href="http://127.0.0.1:8000/hackathon/linkedin/"><img src="/static/img/linkedin.jpg"></a></div>
 
   	</div>
 
