Adding docstrings to github.py methods

--- a/hackathon_starter/hackathon/templates/hackathon/github.html
+++ b/hackathon_starter/hackathon/templates/hackathon/github.html
@@ -3,7 +3,7 @@
 <body>
 	{% include 'hackathon/base.html' %}
 
-    <h2> Generic Information </h2>
+    <h1 class="text-center"> Github Resume </h1>
 	<div class="col-lg-12">
         <div class="table-responsive">
             <table class="table table-bordered table-hover table-striped tablesorter">
