Removing unused templates for browse, login, search, session, updating templates and routing

--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -14,19 +14,10 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title">Applications</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close ng-click="login()">
-          Login
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/search">
-          Search
-        </ion-item>
-        <ion-item nav-clear menu-close href="#/app/browse">
-          Browse
-        </ion-item>
         <ion-item nav-clear menu-close href="#/app/sessions">
             Sessions
         </ion-item>
