Working on hooking up new ionic view to fetch data from Django JSON response

--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -14,7 +14,7 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Applications</h1>
+      <h1 class="title">Left</h1>
     </ion-header-bar>
     <ion-content>
       <ion-list>
