Intermediate work on pulling data from Django JSON response - displaying JSON data on new page

--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -21,6 +21,9 @@
         <ion-item nav-clear menu-close href="#/app/sessions">
             Sessions
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/githubUser">
+            Github User 
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
