--- a/ionic/www/templates/menu.html
+++ b/ionic/www/templates/menu.html
@@ -18,8 +18,8 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close href="#/app/sessions">
-            Sessions
+        <ion-item nav-clear menu-close href="#/app/snippets">
+            Snippets
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/githubUser">
             Github User 
