--- a/ionic/www/templates/snippets.html
+++ b/ionic/www/templates/snippets.html
@@ -1,10 +1,10 @@
-<ion-view title="Sessions">
+<ion-view title="Snippets">
   <ion-nav-buttons side="left">
       <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-content class="has-header">
       <ion-list>
-          <ion-item ng-repeat="session in sessions" >{{session}}</ion-item>
+          <ion-item ng-repeat="snippet in snippets" >{{snippet}}</ion-item>
       </ion-list>
   </ion-content>
 </ion-view>
