Fixed call to Facebook.

--- a/hackathon_starter/hackathon/templates/hackathon/facebook.html
+++ b/hackathon_starter/hackathon/templates/hackathon/facebook.html
@@ -40,7 +40,7 @@
 
   window.fbAsyncInit = function() {
   FB.init({
-    appId      : {{your-app-id}},
+    appId      : {{yourappid}},
     cookie     : true, 
                         
     xfbml      : true,  // parse social plugins on this page
