--- a/hackathon_starter/hackathon/templates/hackathon/quandl.html
+++ b/hackathon_starter/hackathon/templates/hackathon/quandl.html
@@ -4,6 +4,7 @@
 	{% include 'hackathon/base.html' %}
 
     <h1 class="text-center"> Quandl Collection </h1>
+
     <h2 class="text-center"> Dow Jones Data </h2>
 	<div class="col-lg-12">
         <div class="table-responsive">
@@ -13,18 +14,17 @@
                 <th class="header"> Name <i class="icon-sort"></i></th>
                 <th class="header"> Description <i class="icon-sort"></i></th>
                 <th class="header"> Data <i class="icon-sort"></i></th>
-                <th class="header"> Code <i class="icon-sort"></i></th>
-                
+                <th class="header"> Code <i class="icon-sort"></i></th>  
                 </tr>
             </thead>
             <tbody>
 
-            {% for data in data.dowjones %}
+            {% for key in data.dowjones %}
                 <tr>
-                    <td>{{ data.name }}</td>
-                    <td>{{ data.description }}</td>
-                    <td>{{ data.data }}</td>
-                    <td>{{ data.code }}</td>
+                    <td>{{ key.name }}</td>
+                    <td>{{ key.description }}</td>
+                    <td>{{ key.data }}</td>
+                    <td>{{ key.code }}</td>
     	        </tr>
             {% endfor %}
 
