--- a/hackathon_starter/hackathon/templates/hackathon/quandl.html
+++ b/hackathon_starter/hackathon/templates/hackathon/quandl.html
@@ -4,7 +4,6 @@
 	{% include 'hackathon/base.html' %}
 
     <h1 class="text-center"> Quandl Collection </h1>
-
     <h2 class="text-center"> Dow Jones Data </h2>
 	<div class="col-lg-12">
         <div class="table-responsive">
@@ -19,15 +18,14 @@
             </thead>
             <tbody>
 
-            {% for key in data.dowjones %}
+            {% for data in everyData.dow %}
                 <tr>
-                    <td>{{ key.name }}</td>
-                    <td>{{ key.description }}</td>
-                    <td>{{ key.data }}</td>
-                    <td>{{ key.code }}</td>
-    	        </tr>
+                    <td>{{ data.name }}</td>
+                    <td>{{ data.description }}</td>
+                    <td>{{ data.data }}</td>
+                    <td>{{ data.code }}</td>
+                </tr>
             {% endfor %}
-
             </tbody>
             </table>
         </div>
