Added facebook login. still need to add some API examples.

--- a/hackathon_starter/hackathon/templates/hackathon/login.html
+++ b/hackathon_starter/hackathon/templates/hackathon/login.html
@@ -46,6 +46,10 @@
           <i class="fa fa-linkedin"></i>
           Sign in with LinkedIn
         </a> 
+        <a class="btn btn-block btn-social btn-facebook" href="http://localhost:8000/hackathon/facebook_login/">
+          <i class="fa fa-facebook"></i>
+          Sign in with Facebook
+        </a> 
       </div>
     </body>
 </html>
