--- a/hackathon_starter/hackathon/templates/hackathon/api_examples.html
+++ b/hackathon_starter/hackathon/templates/hackathon/api_examples.html
@@ -18,6 +18,7 @@
 		<div class="col-sm-4"><a href="http://localhost:8000/hackathon/yelp/">Yelp</a></div>
 		<div class="col-sm-4"><a href="http://127.0.0.1:8000/hackathon/nytimesarticles/">New York Times</a></div>
         <div class="col-sm-4"><a href="http://localhost:8000/hackathon/facebook/">Facebook Get User Info Exmaple</a></div>
+        <div class="col-sm-4"><a href="http://localhost:8000/hackathon/google/">Google Get User Info Exmaple</a></div>
 
   	</div>
 
