--- a/hackathon_starter/hackathon/templates/hackathon/login.html
+++ b/hackathon_starter/hackathon/templates/hackathon/login.html
@@ -50,6 +50,10 @@
           <i class="fa fa-facebook"></i>
           Sign in with Facebook
         </a> 
+        <a class="btn btn-block btn-social btn-google" href="http://localhost:8000/hackathon/google_login/">
+          <i class="fa fa-google"></i>
+          Sign in with Google+
+        </a> 
       </div>
     </body>
 </html>
