Added Dropbox login option. Added Dropbox API example for getting basic user info and searching files in your dropbox.

--- a/hackathon_starter/hackathon/templates/hackathon/api_examples.html
+++ b/hackathon_starter/hackathon/templates/hackathon/api_examples.html
@@ -19,6 +19,7 @@
 		<div class="col-sm-4"><a href="http://127.0.0.1:8000/hackathon/nytimesarticles/">New York Times</a></div>
         <div class="col-sm-4"><a href="http://localhost:8000/hackathon/facebook/">Facebook Get User Info Exmaple</a></div>
         <div class="col-sm-4"><a href="http://localhost:8000/hackathon/google/">Google Get User Info Exmaple</a></div>
+        <div class="col-sm-4"><a href="http://localhost:8000/hackathon/dropbox/">Dropbox API</a></div>
 
   	</div>
 
