--- a/hackathon_starter/hackathon/templates/hackathon/login.html
+++ b/hackathon_starter/hackathon/templates/hackathon/login.html
@@ -54,6 +54,10 @@
           <i class="fa fa-google"></i>
           Sign in with Google+
         </a> 
+        <a class="btn btn-block btn-social btn-dropbox" href="http://localhost:8000/hackathon/dropbox_login/">
+          <i class="fa fa-dropbox"></i>
+          Sign in with Dropbox
+        </a> 
       </div>
     </body>
 </html>
