Added foursquare login and API example for getting user basic info

--- a/hackathon_starter/hackathon/templates/hackathon/api_examples.html
+++ b/hackathon_starter/hackathon/templates/hackathon/api_examples.html
@@ -17,12 +17,13 @@
 		<div class="col-sm-4"><a href="http://localhost:8000/hackathon/yelp/" style="color: #000"><div style="background-color: #f5f5f5" class="panel panel-default"><div class="panel-body"><img src="http://i.imgur.com/pCmuBIY.png" height="40"> Yelp </div></div></a></div>
 		<div class="col-sm-4"><a href="http://127.0.0.1:8000/hackathon/nytimesarticles/" style="color: #fff"><div style="background-color: #454442" class="panel panel-default"><div class="panel-body"><img src="http://i.imgur.com/e3sjmYj.png" height="40"> New York Times</div></div></a></div>
         <div class="col-sm-4"><a href="http://localhost:8000/hackathon/facebook/" style="color: #fff"><div style="background-color: #3b5998" class="panel panel-default"><div class="panel-body"><img src="http://i.imgur.com/jiztYCH.png" height="40"> Facebook Example</div></div></a></div>
-        
-        <div class="col-sm-4"><a href="http://localhost:8000/hackathon/google/" style="color: #fff"><div style="background-color: #d95234" class="panel panel-default"><div class="panel-body"><img src="http://upcity.com/blog/wp-content/uploads/2013/11/Google-Plus-Logo-650x318.png" height="40">Google User Info Example</div></div></a></div>
-        
-        <div class="col-sm-4"><a href="http://localhost:8000/hackathon/dropbox/" style="color: #fff"><div style="background-color: #0d56a0" class="panel panel-default"><div class="panel-body"><img src="https://lh6.ggpht.com/fR_IJDfD1becp10IEaG2ly07WO4WW0LdZGUaNSrscqpgr9PI53D3Cp0yd2dXOgyux8w=w300" height="40">Dropbox API</div></div></a></div>
 
+        <div class="col-sm-4"><a href="http://localhost:8000/hackathon/google/" style="color: #fff"><div style="background-color: #d95234" class="panel panel-default"><div class="panel-body"><img src="http://upcity.com/blog/wp-content/uploads/2013/11/Google-Plus-Logo-650x318.png" height="40">Google User Info Example</div></div></a></div>
+
+        <div class="col-sm-4"><a href="http://localhost:8000/hackathon/dropbox/" style="color: #fff"><div style="background-color: #0d56a0" class="panel panel-default"><div class="panel-body"><img src="https://lh6.ggpht.com/fR_IJDfD1becp10IEaG2ly07WO4WW0LdZGUaNSrscqpgr9PI53D3Cp0yd2dXOgyux8w=w300" height="40">Dropbox API</div></div></a></div>
+		<div class="col-sm-4"><a href="http://localhost:8000/hackathon/foursquare/" style="color: #000"><div style="background-color: #ffffff" class="panel panel-default"><div class="panel-body"><img src="http://www.atlantamusicguide.com/wp-content/uploads/foursquare-logo.png" height="40">&nbspAPI Example</div></div></a></div>
   	</div>
+
 
 </body>
 </html>
