--- a/hackathon_starter/hackathon/templates/hackathon/login.html
+++ b/hackathon_starter/hackathon/templates/hackathon/login.html
@@ -6,7 +6,7 @@
         max-width: 550px;
         padding: 15px;
         margin: 0 auto;
-      }    
+      }
     </style>
 
     <body>
@@ -25,7 +25,7 @@
         </form>
       </div>
 
-      <div class="form-signin">          
+      <div class="form-signin">
         <a class="btn btn-block btn-social btn-twitter" href="http://127.0.0.1:8000/hackathon/twitter_login/">
           <i class="fa fa-twitter"></i>
           Sign in with Twitter
@@ -45,19 +45,23 @@
         <a class="btn btn-block btn-social btn-linkedin" href="http://localhost:8000/hackathon/linkedin_login/">
           <i class="fa fa-linkedin"></i>
           Sign in with LinkedIn
-        </a> 
+        </a>
         <a class="btn btn-block btn-social btn-facebook" href="http://localhost:8000/hackathon/facebook_login/">
           <i class="fa fa-facebook"></i>
           Sign in with Facebook
-        </a> 
+        </a>
         <a class="btn btn-block btn-social btn-google" href="http://localhost:8000/hackathon/google_login/">
           <i class="fa fa-google"></i>
           Sign in with Google+
-        </a> 
+        </a>
         <a class="btn btn-block btn-social btn-dropbox" href="http://localhost:8000/hackathon/dropbox_login/">
           <i class="fa fa-dropbox"></i>
           Sign in with Dropbox
-        </a> 
+        </a>
+        <a class="btn btn-block btn-social btn-foursquare" href="http://localhost:8000/hackathon/foursquare_login/">
+          <i class="fa fa-foursquare"></i>
+          Sign in with Foursquare
+        </a>
       </div>
     </body>
 </html>
